@@ -56,7 +56,7 @@ UI_EN = {
     UI_trait_scrounger = "Scrounger",
     UI_trait_scroungerdesc = "You're careful to search every nook and cranny.<br>You tend to find more items while searching containers.",
     UI_trait_antique = "Antique Collector",
-    UI_trait_antiquedesc = "You know how to recognize an antique item when you see it.<br>You have a rare chance to find unique variants of items while searching containers.",
+    UI_trait_antiquedesc = "You know how to recognize an antique item when you see it.<br>You have a rare chance to find unique variants of items while searching industrial containers.",
     UI_trait_incomprehensive = "Incomprehensive",
     UI_trait_incomprehensivedesc = "You're not as thorough as most.<br>You tend to find less items while searching containers.",
     UI_trait_evasive = "Evasive",
